--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -141,8 +141,9 @@ $x-large: 1280px !default;
    Grid
    ========================================================================== */
 
+// $right-sidebar-width-narrow: 190px !default;
 $right-sidebar-width-narrow: 200px !default;
-$right-sidebar-width: 300px !default;
+$right-sidebar-width: 250px !default;
 $right-sidebar-width-wide: 400px !default;
 
 /*
